# cowrywise-clone-backend

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: django.yml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_profile_phone_number_user_phone_number.py  0003_profile_bvn_profile_date_of_birth_and_more.py  0004_profile_next_of_kin_alter_nextofkin_phone_number.py  0005_remove_profile_next_of_kin_nextofkin_user_security.py  0006_alter_security_pin_alter_security_two_fa.py  0007_alter_profile_date_of_birth_and_more.py  0008_profile_first_name_profile_last_name.py
apps/accounts/: models.py
apps/plans/: models.py  views.py
apps/stash/: apps.py  models.py
config/: settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py
payments/: admin.py  models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_bankdetails_authorization_code.py  0003_alter_bankdetails_authorization_code.py  0004_remove_bankdetails_authorization_code_and_more.py
plans/: admin.py  models.py  serializers.py  urls.py  views.py
plans/migrations/: 0001_initial.py  0002_usersavingsplan_balance_alter_savings_savings_type.py  0003_rename_amount_savings_balance_savings_user_and_more.py  0004_alter_investment_icon_alter_savings_icon.py  0005_savings_amount_alter_savings_frequency.py  (+1 more)
stash/: admin.py  models.py  serializers.py  urls.py  views.py
transactions/: models.py
utils/: otp.py  paystack_funcs.py  send_email.py
(+12 files in other folders)
