[tool.poetry]
name = "cowrywise-clone-backend"
version = "0.1.0"
description = "Django REST API for Cowrywise Clone"
authors = ["oluwakayode"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-rest-auth = {extras = ["with_social"], version = "^0.9.5"}
djangorestframework-jwt = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
